# libhashmap

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  minimake.sh
.github/workflows/: unittests.yml
inc/: hashmap.h  hashmap_internal.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  add_node_to_history.c  find_node_by_key.c  hash.c  hash_map.c  history_destroy.c  hm_add_new_key.c  hm_destroy.c  hm_find_existing_node_and_replace_value.c  hm_get.c  hm_get_collision_count.c  hm_get_seq.c  hm_handle_collision.c  hm_insert_node.c  hm_new.c  hm_remove.c  hm_set.c  hm_size.c  new_node.c  node_destroy.c  node_remove_from_list.c
tests/: CMakeLists.txt  main.c
tests/src/: hashmap.cpp  hashmap_collisions.cpp  test.cpp.template
tests/standalone_tests/: main.c
